--- a/requirements.txt
+++ b/requirements.txt
@@ -28,8 +28,8 @@ sklearn==0.0
 tensorboard==1.15.0
 threadpoolctl==3.1.0
 tifffile==2021.11.2
-torch==1.10.1+cu111
-torchvision==0.11.2+cu111
+torch
+torchvision
 tqdm==4.64.0
 typing_extensions==4.2.0
 Werkzeug==2.1.1
