--- a/requirements.txt
+++ b/requirements.txt
@@ -19,20 +19,14 @@ pyparsing==3.0.8
 python-dateutil==2.8.2
 pytz==2022.1
 PyWavelets==1.3.0
-PyYAML==5.4.1
-scikit-image==0.16.2
-scikit-learn==1.0.2
-scipy==1.7.3
+PyYAML
 six==1.16.0
 sklearn==0.0
-tensorboard==1.15.0
 threadpoolctl==3.1.0
 tifffile==2021.11.2
-torch
-torchvision
 tqdm==4.64.0
 typing_extensions==4.2.0
 Werkzeug==2.1.1
 zipp==3.8.0
 imageio-ffmpeg
-face_alignment
+face_alignment==1.3.4
