--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ kiwisolver==1.4.2
 Markdown==3.3.6
 matplotlib==3.5.1
 networkx==2.6.3
-numpy==1.21.6
+numpy==1.23.5
+numba==0.57.1
 packaging==21.3
 pandas==1.3.5
 Pillow==9.1.0
